<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Knock Knock</string>
    <string name="title_activity_maps">Knock Knock</string>
    <string name="title_activity_location_detector">Location Detector</string>

    <!-- User interface labels and strings -->


    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Menu title -->
    <string name="action_settings">Settings</string>

    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>

    <!-- Messages -->
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">Location update error. No incoming location.</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="request_location_updates_in_progress">Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="lbl_retrieving">Retrieving…</string>
    <string name="lbl_current_location">Current location:</string>
    <string name="btn_add_geofences">Add New Reminder</string>
    <string name="btn_show_geofences">Show Reminder(s)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_latitude">Latitude:</string>
    <string name="lbl_longitude">Longitude:</string>
    <string name="title_activity_add_geofence">Add Reminder</string>
    <string name="lbl_radius">Radius (meter):</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="lbl_expiration">Expiration (hour):</string>
    <string name="lbl_type">Type:</string>
    <string name="lbl_help">You can set latitude and longitude here in the textboxes or you can set these from the map by tapping on the map.</string>
    <string name="lbl_details">Name field is not a must for the geofence to work. It is a identifier for your convenience.\n\n

        Latitude and Longitude fields are for the center of your destination.\n\n

        Radius is the field where you can set the value of the farthest distance where you want to be reminded.\n\n

        With the latitude, longitude and the radius Knock Knock will create a circular area on the map having latitude and longitude as the center of it
        and radius as the radius of the circle.\n\n

        Expiration time is the field where you should specify the time of expiration of this reminder. You can set negative value if you want never to expire it.\n\n

        Type is the field where you should specify when should you be reminded. There are three types. Enter, Exit and Both.\n
        Select Enter if you want to be reminded when you enter the area.\n
        Select Exit if you want to be reminded when you exit the area.\n
        Select Both if you want to be reminded when you either enter or exit the area.</string>
    <string name="title_activity_details_help">DetailsHelpActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="lbl_heading_details_help">Knock Knock</string>
    <string name="btn_help">Help</string>
    <string name="lbl_approximate_address">Approximate address :</string>
    <string name="btn_got_it">OK, got it!</string>
    <string name="title_activity_list_geofences">List Geofences</string>
    <string name="btn_delete">Delete</string>
    <string name="action_delete">Delete Selected</string>
    <string name="lbl_name">Name</string>
    <string name="default_name">New Reminder</string>
    <string name="clear_all">Clear All</string>

    <!-- Messages -->
    <string name="add_geofences_result_success">        Add Geofences: Success GeofenceRequestIds=%1$s</string>
    <string name="add_geofences_result_failure">        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="add_geofences_already_requested_error">        Can\'t add geofences, previous request hasn\'t finished.</string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="geofence_input_error_latitude_invalid">        Invalid latitude(s). Must be in the range -90 to 90 degrees</string>
    <string name="geofence_input_error_longitude_invalid">        Invalid longitude(s). Must be in the range -180 to 180 degrees</string>
    <string name="geofence_input_error_radius_invalid">        Invalid radius(s). Must be 1 meter or greater.</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_error_detail">        Geofence transition error, code %1$d message %2$s.</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">        Geofence transition error. Invalid type %1$d in geofences %2$s</string>
    <string name="geofence_transition_notification_text">        Click notification to return to app</string>
    <string name="geofence_transition_notification_title">        %1$s geofence(s) %2$s</string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="latitude_error_message">        Latitude should be in the range -90 to 90 degrees</string>
    <string name="longitude_error_message">        Longitude should be in the range -180 to 180 degrees</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="radius_error_message">Radius must be greater than or equal to 0</string>
    <string name="register_geofence">Register geofence</string>
    <string name="remove_geofences_id_failure">        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="remove_geofences_already_requested_error">        Can\'t remove geofences, previous request hasn\'t finished.</string>
    <string name="remove_geofences_id_success">        Removing geofences by request ids succeeded: request ids: %1$s</string>
    <string name="remove_geofences_intent_failure">        Removing all geofences failed: error code %1$d</string>
    <string name="remove_geofences_intent_success">        Removing all geofences succeeded.</string>
    <string name="transition_entered">entered</string>
    <string name="transition_exited">exited</string>
    <string name="transition_unknown">unknown</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="unregister_geofence">Remove geofences</string>
    <string name="unregister_geofence1">Remove geofence 1</string>
    <string name="unregister_geofence2">Remove geofence 2</string>

    <!-- Number patterns -->
    <string name="lat_lng_pattern">* ###.00000000;* -###.00000000</string>
    <string name="radius_pattern">* #.0000</string>
    <string name="btn_return">Return</string>
    <string name="btn_clear">Clear All</string>
    <string name="title_activity_notification">Notification Activity</string>
    <string name="lbl_description">You have a reminder about this place!</string>
    <string name="btn_stop">Shut up! Go to the application.</string>

</resources>
