<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fillViewport="true">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.shakeme.sazedul.knockknock.AddGeofenceActivity">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_from_heading"
            android:orientation="horizontal">

            <TextView android:id="@+id/lbl_place_address"
                android:text="@string/lbl_approximate_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView android:id="@+id/txt_place_address"
                android:text="@string/lbl_retrieving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/lbl_latitude"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/txt_latitude"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:enabled="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/lbl_longitude"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/txt_longitude"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:enabled="true"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/lbl_radius"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/txt_radius"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:enabled="true"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/lbl_expiration"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/txt_expiration"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:enabled="true"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/lbl_type"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            style = "?android:attr/buttonBarStyle"
            android:orientation="horizontal">

            <Button
                style = "?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_ok"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <Button
                style = "?android:attr/buttonBarButtonStyle"
                android:id="@+id/btn_cancel"
                android:text="@string/btn_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="finishTheActivity"
                android:layout_height="wrap_content" />
            <Button
                style = "?android:attr/buttonBarButtonStyle"
                android:id="@+id/btn_help"
                android:text="@string/btn_help"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="showHelpActivity"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/lbl_help"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>