<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/lbl_current_location"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:id="@+id/txt_current_location"
            android:layout_gravity="center_vertical"
            android:text="@string/lbl_retrieving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ProgressBar
            android:id="@+id/cur_location_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/btn_add_geofences"
            android:textSize="8dp"
            android:text="@string/btn_add_geofences"
            android:layout_width="fill_parent"
            android:layout_height="30dp" />
        <Button android:id="@+id/btn_show_geofences"
            android:textSize="8dp"
            android:text="@string/btn_show_geofences"
            android:layout_width="fill_parent"
            android:layout_height="30dp" />
    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="fill_parent" android:id="@+id/map" tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:layout="@layout/activity_maps" />
</LinearLayout>