<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fillViewport="true"
    android:padding="@dimen/layout_padding_all"
    tools:context="com.shakeme.sazedul.knockknock.DetailsHelpActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/lbl_heading_details_help"
            android:gravity="center"
            android:textSize="@dimen/text_size_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/lbl_details"
            android:paddingTop="@dimen/padding_from_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/btn_ok"
            android:text="@string/btn_got_it"
            style="?android:buttonBarButtonStyle"
            android:layout_gravity="center|bottom"
            android:layout_width="wrap_content"
            android:onClick="getBackToTheParentActivity"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
